deployment/inventory/prod/kustomization-config/kustomization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  labels:
    app: website
spec:
  template:
    spec:
      containers:
        - image: crownlabs/website
          name: website
