deployment/inventory/prod/kustomization-config/kustomization-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
  name: website
spec:
  selector:
    app: website
