deployment/inventory/prod/kustomization-config/kustomization-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: website
spec:
  rules:
    - host: crownlabs.polito.it
      http:
        paths:
          - backend:
              serviceName: website-prod
              servicePort: 80
            path: /
  tls:
    - hosts:
        - crownlabs.polito.it
      secretName: website-cert
